fix(navigation-menu): increment z-index - INNO-1882 (#1351)

--- a/src/generic/generic-component-navigation-menu/generic-component-navigation-menu.scss
+++ b/src/generic/generic-component-navigation-menu/generic-component-navigation-menu.scss
@@ -334,7 +334,7 @@
       ~ .ecl-navigation-menu__group {
       align-items: baseline;
       display: flex;
-      z-index: map-get($ecl-z-index, 'highlight');
+      z-index: map-get($ecl-z-index, 'dropdown');
     }
 
     .ecl-navigation-menu__item {
